add display block -> .value (style.css)

--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@
     display: flex;
   }
   .value {
+    display: block;
     color: #fff;
     font-size: 4.2rem;
     text-transform: uppercase;
